need to fix animation jumps when swapping pages.

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,25 @@
   margin: 0;
   padding: 0;
 }
+
+.fade-enter {
+  opacity: 0;
+  transform: translate(100vw, 0);
+  z-index: 1;
+}
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+
+  transition: opacity 250ms ease-out, transform 300ms ease;
+}
+.fade-exit {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transform: translate(100vw, 0);
+
+  transition: opacity 250ms ease-out, transform 300ms ease;
+}
