--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -4,7 +4,7 @@
 }
 
 .Background {
-  position: absolute;
+  position: fixed;
   display: grid;
   width: 100vw;
   height: 100vh;
