--- a/src/components/pages/ProjectsPage.css
+++ b/src/components/pages/ProjectsPage.css
@@ -1,6 +1,5 @@
 #projectsPageContainer {
   color: aliceblue;
-  z-index: 100;
   position: absolute;
   width: 100vw;
   height: 100vh;
